--- a/xrRNG.vcxproj.filters
+++ b/xrRNG.vcxproj.filters
@@ -146,6 +146,18 @@
     <ClCompile Include="3rdparty\volk\volk.c">
       <Filter>3rdparty\volk</Filter>
     </ClCompile>
+    <ClCompile Include="frontend\tasks\00_copy_n_clear.cc">
+      <Filter>frontend\tasks</Filter>
+    </ClCompile>
+    <ClCompile Include="frontend\tasks\01_dbg__static_boxes.cc">
+      <Filter>frontend\tasks</Filter>
+    </ClCompile>
+    <ClCompile Include="device\debug.cpp">
+      <Filter>device</Filter>
+    </ClCompile>
+    <ClCompile Include="legacy\debug\du_box.cpp">
+      <Filter>legacy\debug</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -216,6 +228,9 @@
     </Filter>
     <Filter Include="resources">
       <UniqueIdentifier>{28305e5f-aa1d-411b-a8be-3dc958d78ec5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="legacy\debug">
+      <UniqueIdentifier>{43a68c54-1cc1-4ae8-8115-20dabbf52377}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -376,6 +391,9 @@
     </ClInclude>
     <ClInclude Include="3rdparty\volk\volk.h">
       <Filter>3rdparty\volk</Filter>
+    </ClInclude>
+    <ClInclude Include="legacy\debug\du_box.h">
+      <Filter>legacy\debug</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
